plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.portnum'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//===Spring Security===//
	implementation 'org.springframework.boot:spring-boot-starter-security'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	//===Valid===//
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'

	//===AWS S3===//
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//=== QueryDSL dependencies 추가 ===//
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	/* h2 */
	runtimeOnly 'com.h2database:h2'

	/* jasypt */
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	/* Redis 추가 */
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	/* SMTP 설정 */
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework:spring-context:6.1.4'
	implementation 'org.springframework:spring-context-support:6.1.4'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'

	/* Java 8 날짜/시간 타입 처리를 위한 Jackson 모듈 추가 */
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

}

tasks.named('test') {
	useJUnitPlatform()
}

jar { enabled = false }